# Transcoder

./: .gitattributes  README.md
code/: .build.sh.swp  CMakeLists.txt  build.sh  transcode_rpc.pb.go
code/inc/: Adinsert.h  Audio.h  CtxWrapper.h  Option.h  RPCServer.h  Stream.h  Timer.h  TransState.h  Transcoder.h  Video.h
code/src/: Adinsert.cpp  Audio.cpp  Client.cpp  CtxWrapper.cpp  RPCServer.cpp  Timer.cpp  TransState.cpp  Transcoder.cpp  Video.cpp  main.cpp  mixed.c  remuxing.c  transcode_aac.c  transcode_rpc.grpc.pb.cc  transcode_rpc.grpc.pb.cpp  transcode_rpc.grpc.pb.h  transcode_rpc.pb.cc  transcode_rpc.pb.cpp  transcode_rpc.pb.h  transcode_rpc.proto  transcoding.c
goclient/: build.sh  client.go  http.go
include/libavutil/: ffversion.h
